fix: added a gap between the lines if the completeBlockLinks has 2+ lines of content (#953)

--- a/src/theme/ItaliaTheme/Blocks/_completeBlockLinkstemplate.scss
+++ b/src/theme/ItaliaTheme/Blocks/_completeBlockLinkstemplate.scss
@@ -3,6 +3,10 @@
     text-decoration: none;
   }
 
+  .row {
+    row-gap: 22px;
+  }
+
   .image-container {
     display: flex;
     overflow: hidden;
